--- a/style.css
+++ b/style.css
@@ -1,1 +1,26 @@
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Roboto+Slab:wght@500&family=Source+Sans+Pro:wght@200;400;600&display=swap');
+
+header {
+    
+}
+
+h1 {
+    text-align: center;
+
+}
+
+.newspaper-container {
+    width: 700px;
+    margin: auto;
+
+}
+
+li {
+
+    display: inline-block;
+}
+
+ul {
+
+    text-align: center;
+}
