--- a/style.css
+++ b/style.css
@@ -1,8 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Roboto+Slab:wght@500&family=Source+Sans+Pro:wght@200;400;600&display=swap');
 
-header {
-    
-}
+header {}
 
 h1 {
     text-align: center;
@@ -12,6 +10,10 @@ h1 {
 .newspaper-container {
     width: 700px;
     margin: auto;
+    border-top : 12px solid #1169b6dc;
+    border-radius: 10px;
+    margin-top: 15px;
+    margin-bottom: 5px;
 
 }
 
@@ -23,4 +25,8 @@ li {
 ul {
 
     text-align: center;
+}
+
+body{
+    background-color: #eee;
 }
